src/snapshots/afrotd__parser__tests__interpretation_html_9.4.1_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.4.1.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A ist zum Kickoff bereit. Der Ball liegt auf einem Tee und der
            Referee hat den Ball freigegeben. Als der Kicker seinen Anlauf
            beginnt, rollt der Ball langsam vom Tee, während der Kicker seine
            Kickbewegung beginnt. Der Kicker führt die Kickbewegung fort und
            kickt den Ball, bevor dieser vollständig vom Tee gefallen ist.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Foul. Das ist weder ein Verstoß gegen Regel 9.4.4 noch
                gegen 9.2.1.a.2.a. Die Schiedsrichter sollten das Spiel
                unterbrechen und die Teams neu aufstellen lassen. Wenn es die
                Wetterumstände erfordern, muss Team A einen Spieler bestimmen,
                der den Ball auf dem Tee festhält.
            </p>
        </details>
    </div>
</article>
