src/snapshots/afrotd__parser__tests__interpretation_html_9.4.1_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.4.1.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A versucht ein Fieldgoal von der B-30. Ein Team B-Spieler in
            der Endzone springt vor der Querlatte hoch und schlägt den
            fliegenden Ball weg. Der Ball fliegt zurück ins Spielfeld.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul für Schlagen des Balles in der Endzone. Während der
                regulären Spielzeit ergibt das Postscrimmage Kick Enforcement
                einen Safety durch die Strafe. Der Ball bleibt im Spiel und
                Team A kann das Ergebnis des Downs wählen. Wenn Team A den Ball
                recovert, keine Punkte erzielt und die Strafe annimmt oder sich
                das Geschehen während einer Extraperiode ereignet, wird die
                Strafe vom Previous Spot durchgeführt.
            </p>
        </details>
    </div>
</article>
