src/snapshots/afrotd__parser__tests__interpretation_html_9.4.1_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.4.1.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein im Flug befindlicher Team A-Fumble wird von B1 vorwärts
            geschlagen und der Ball geht hinter Team A’s Goalline ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das Ergebnis des Down ist ein Safety. Das Wegschlagen des
                Fumbles gibt dem Ball keinen neuen Antrieb (Regel 8.7.2.b).
                Team BFoul. Strafe – 10 Meter. A’s Ball nach Bestrafung des
                Team B-Fouls für das illegale Schlagen eines freien Balles vom
                Previous Spot.
            </p>
        </details>
    </div>
</article>
