src/snapshots/afrotd__parser__tests__interpretation_html_9.4.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.4.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 8 von der A-48. A32 puntet aus einer Scrimmage KickFormation
            bis zu der B-7, wo der Ball gegen das Bein von B25 springt. Als der
            Ball auf dem Boden rollt, tritt B25 an der B-4 den Ball weg, um zu
            verhindern, dass Team A den Ball recovert. Der Ball rollt bis in
            Team B’s Endzone und geht von dort über die Endlinie ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das Ergebnis des Downs ist ein Safety, da B25 dem Ball durch
                das Kicken einen neuen Antrieb gab. Foul von B25 für das
                illegale Kicken eines Balles. Team A kann die Strafe ablehnen
                und damit die zwei Punkte akzeptieren oder die Strafe annehmen.
                Die Annahme der Strafe wird durch die Regeln bezüglich des
                Postscrimmage Kick Enforcements bestimmt. Die angenommene
                Strafe gibt den Ball an Team B, 1. und 10 von der B-2 (Regeln
                8.5.1.a und 8.7.2.b).
            </p>
        </details>
    </div>
</article>
